# kubsu_astro_app

./: .gitignore  KUBSU_Astro_App.spec  README.md  build_and_test.ps1  conftest.py  hook.py  instruction.md  pyproject.toml  requirements.txt  run_all.ps1  setup.cfg  setup.py  struct.md
app/: controllers.py  fits.py  main.py  models.py  point_manager.py  utils.py  views.py
app/backend/: main.py  requirements.txt  setup.py
app/backend/app/api/: endpoints.py  schemas.py
app/backend/app/core/calculations/: comet_calculations.pyd
app/backend/app/core/services/: config.py  file_parser.py  logger.py
app/backend/cpp/core/: sublimation.cpp
app/backend/tests/: test_sublimation.py
app/frontend/: front_v2.py
application/: main.py
application/backend/: main.py
application/backend/app/api/: endpoints.py
application/backend/app/core/calculations/: cpp_loader.py  fake_cpp.py  nucleus.py  sublimation.py
application/backend/cpp/: CMakeLists.txt
application/backend/cpp/core/: nucleus.cpp
application/backend/cpp/include/: nucleus.h  sublimation.h
application/backend/tests/: test_sublimation.py
application/frontend/: front_v2.py  requirements.txt
backend/: CMakeLists.txt  main.py  setup.py
backend/app/api/: endpoints.py  schemas.py
backend/app/core/calculations/: cpp_loader.py  mass.py  nucleus.py  sublimation.py
backend/app/core/calculations/Release/: comet_calculations.pyd
backend/app/core/services/: config.py  file_parser.py  logger.py
backend/cpp/: BUILD_INSTRUCTIONS_WINDOWS.md  CMakeLists.txt
backend/cpp/core/: mass.cpp  nucleus.cpp  sublimation.cpp
backend/cpp/include/: mass.h
backend/tests/: test_sublimation.py
data/: params_afrho_r.json  params_mag_r.json  sample_points.csv  test_afrho_date.txt  test_afrho_r.txt  test_mag_date.txt  test_mag_r.txt  test_params.txt
frontend/: README.md  app.py  config.py  front_v2.py
frontend/views/: __init__.py  help_window.py  main_window.py
frontend/views/tabs/: base_tab.py  graph_tab.py  mass_tab.py  size_tab.py  sublimation_tab.py
src/app/: models.py  views.py
