[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kubsu-astro-app"
version = "0.0.2"
authors = [
    { name = "Nikiforovich Maksim", email = "nikiforovichmaksim@ya.ru" },
]
description = "PyQt5-based scientific application for modeling sublimation, mass, size, and graph data with GUI and executable build support."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tomboymito/kubsu_astro_app"