[metadata]
name = kubsu_astro_app
version = 0.0.2
description = PyQt5-based scientific application for modeling sublimation, mass, size, and graph data with GUI and executable build support.
author = Nikiforovich Maksim
author_email = nikiforovichmaksim@ya.ru
license = MIT

[options]
packages = find:
include_package_data = true
python_requires = >=3.8

[options.package_data]
* = *.ui, *.png, *.jpg, *.svg *.ico
